# assistive-rehab

./: .gitignore  AssistiveRehabConfig.cmake.in  CMakeLists.txt  LICENSE  README.md  index.html
cmake/: FindMATIO.cmake
lib/: CMakeLists.txt
lib/include/AssistiveRehab/: dtw.h  helpers.h  skeleton.h
lib/src/: dtw.cpp  helpers.cpp  skeleton.cpp
modules/: CMakeLists.txt
modules/actionManager/: CMakeLists.txt
modules/actionManager/src/: main.cpp
modules/actionRecognizer/: CMakeLists.txt  actionRecognizer.xml
modules/actionRecognizer/app/conf/: checkpoint  checkpoint_right  checkpoint_seated  checkpoint_seated_right  config-seated.ini  config.ini  model.data-00000-of-00001  model.index  model_left.data-00000-of-00001  model_right.data-00000-of-00001  model_right.index  model_seated_left.data-00000-of-00001  model_seated_left.index  model_seated_right.data-00000-of-00001  scale_values.txt
modules/actionRecognizer/src/: idl.thrift  main.cpp
modules/alignmentManager/: CMakeLists.txt
modules/alignmentManager/app/scripts/: alignmentManager-faces.xml.template  alignmentManager.xml.template
modules/alignmentManager/include/: Dtw.h
modules/alignmentManager/src/: main.cpp
modules/attentionManager/: CMakeLists.txt  attentionManager.xml
modules/attentionManager/src/: idl.thrift  main.cpp
modules/contactPlugin/: CMakeLists.txt
modules/contactPlugin/include/: contactPlugin.hh
modules/contactPlugin/src/: contactPlugin.cc
modules/eventCollector/: CMakeLists.txt  eventCollector.xml
modules/eventCollector/src/: collector.cpp  idl.thrift
modules/faceRecognizer/: CMakeLists.txt  faceRecognizer.thrift  faceRecognizer.xml
modules/faceRecognizer/include/: queryThread.h
modules/faceRecognizer/src/: main.cpp  queryThread.cpp
modules/fakeSpeechInteraction/: CMakeLists.txt  README.md
modules/fakeSpeechInteraction/cmake/: FindGRPC.cmake
modules/fakeSpeechInteraction/modules/: CMakeLists.txt
modules/feedbackProducer/: CMakeLists.txt  feedbackProducer.xml
modules/feedbackProducer/src/: idl.thrift  main.cpp
modules/feedbackSynthetizer/: CMakeLists.txt  feedbackSynthetizer.xml
modules/feedbackSynthetizer/src/: main.cpp
modules/finishLineDetector/: CMakeLists.txt  finishLineDetector.xml
modules/finishLineDetector/src/: main.cpp
modules/forcePlugin/: CMakeLists.txt
modules/forcePlugin/include/: forcePlugin.hh
modules/forcePlugin/src/: forcePlugin.cc
modules/human-structure/: CMakeLists.txt  main.cpp
modules/humanStructure/: CMakeLists.txt  humanStructure.thrift  humanStructure.xml  main.cpp
modules/interactionManager/: CMakeLists.txt  interactionManager.xml
modules/interactionManager/src/: idl.thrift  main.cpp  main.cpp.orig
modules/lineDetector/: CMakeLists.txt  lineDetector.xml
modules/lineDetector/src/: idl.thrift  main.cpp
modules/lineDetector_new/: CMakeLists.txt
modules/lineDetector_new/ros2_scripts/: marker_publisher.py
modules/lineDetector_new/src/: detector.h  detector_idlMethods.cpp  detector_navPort.cpp  detector_rfmodule.cpp  detector_tfPublisher.cpp  detector_viewer.cpp  idl.thrift  idlMethods.cpp  main.cpp  opc.cpp  rfmodule.cpp  sim.cpp
modules/managerTUG/: CMakeLists.txt  managerTUG.xml
modules/managerTUG/include/: AnswerManager.h  HandManager.h  Manager.h  ObstacleManager.h  Speech.h  SpeechParam.h  TriggerManager.h  helpers.h
modules/managerTUG/src/: AnswerManager.cpp  AnswerManager.h  HandManager.cpp  HandManager.h  Manager.cpp  Manager.h  ObstacleManager.cpp  ObstacleManager.h  Speech.cpp  Speech.h  SpeechParam.cpp  SpeechParam.h  TriggerManager.cpp  TriggerManager.h  helpers.cpp  helpers.h  idl.thrift  main.cpp
modules/motionAnalyzer/: CMakeLists.txt  motionAnalyzer.xml
modules/motionAnalyzer/app/: CMakeLists.txt
modules/motionAnalyzer/include/: Exercise.h  Manager.h  Metric.h  Processor.h
modules/motionAnalyzer/src/: Exercise.cpp  Main.cpp  Manager.cpp  Metric.cpp  Processor.cpp  idl.thrift
modules/navController/: CMakeLists.txt  navController.xml
modules/navController/src/: idl.thrift  main.cpp
modules/obstacleDetector/: CMakeLists.txt  obstacleDetector.xml
modules/obstacleDetector/src/: idl.thrift  main.cpp
modules/recognition-manager/: CMakeLists.txt  main.cpp  recognition-manager.thrift
modules/recognition-manager/app/: CMakeLists.txt
modules/recognition-manager/include/: queryThread.h
modules/recognition-manager/src/: main.cpp  queryThread.cpp
modules/recognition_manager/: CMakeLists.txt  main.cpp
modules/recognition_manager/app/: CMakeLists.txt
modules/robotSkeletonPublisher/: CMakeLists.txt  main.cpp  robotSkeletonPublisher.xml
modules/robotSkeletonPublisher/src/: idl.thrift  main.cpp
modules/skeletonLocker/: CMakeLists.txt  skeletonLocker.xml
modules/skeletonLocker/src/: idl.thrift  main.cpp
modules/skeletonPlayer/: CMakeLists.txt  skeletonPlayer.xml
modules/skeletonPlayer/src/: idl.thrift  main.cpp
modules/skeletonRetriever/: CMakeLists.txt  skeletonRetriever.xml
modules/skeletonRetriever/src/: main.cpp  nlp.cpp  nlp.h  utils.h
modules/skeletonScaler/: CMakeLists.txt  skeletonScaler.xml
modules/skeletonScaler/src/: main.cpp
modules/skeletonViewer/: CMakeLists.txt  main.cpp  skeletonViewer.xml
modules/skeletonViewer/src/: idl.thrift  main.cpp
modules/speechInteraction/: CMakeLists.txt  README.md
modules/speechInteraction/cmake/: FindGOOGLEAPIS.cmake
modules/speechInteraction/modules/: CMakeLists.txt
motionAnalyzer/: CMakeLists.txt  main.cpp
motionAnalyzer/app/: CMakeLists.txt  motion-list.ini
motionAnalyzer/include/: Extractor.h  Manager.h  Metric.h  Processor.h  skeleton.h
motionAnalyzer/src/: Extractor.cpp  Manager.cpp  Metric.cpp  Processor.cpp  main.cpp  skeleton.cpp
test/: CMakeLists.txt  CMakeLists.txt.orig  idl_rom.thrift  test-depth-overlay.cpp  test-dtw.cpp  test-dtwlib.cpp  test-matio.cpp  test-rom.cpp  test-skeleton.cpp  test-viewer.cpp
tests/: CMakeLists.txt  test-depth-overlay.cpp  test-dtwlib.cpp  test-linecrossing.cpp  test-nav.cpp  test-overlay.cpp  test-rom.cpp  test-skeleton.cpp  test-tracker.cpp  test-viewer.cpp
(+790 files in other folders)
