# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)
# All Rights Reserved.
# Authors: Ugo Pattacini <ugo.pattacini@iit.it>

add_subdirectory(motionAnalyzer)
add_subdirectory(skeletonViewer)
add_subdirectory(skeletonRetriever)
add_subdirectory(skeletonPlayer)
add_subdirectory(skeletonScaler)
add_subdirectory(human-structure)
add_subdirectory(recognition-manager)
add_subdirectory(attentionManager)
add_subdirectory(interactionManager)
add_subdirectory(alignmentManager)
