# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)
# All Rights Reserved.
# Authors: Ugo Pattacini <ugo.pattacini@iit.it>

add_subdirectory(motionAnalyzer)
add_subdirectory(skeletonViewer)
add_subdirectory(skeletonRetriever)
add_subdirectory(skeletonPlayer)
add_subdirectory(skeletonScaler)
add_subdirectory(humanStructure)
add_subdirectory(faceRecognizer)
add_subdirectory(attentionManager)
add_subdirectory(interactionManager)
add_subdirectory(alignmentManager)
add_subdirectory(feedbackSynthetizer)
add_subdirectory(actionRecognizer)
